Added HTML file and made adjustments
Added jsLabs.html

Added link to jsLabs.html under projects-tab

--- a/PersonalSiteV3/PersonalSiteV3.vbproj
+++ b/PersonalSiteV3/PersonalSiteV3.vbproj
@@ -103,6 +103,7 @@
     <Content Include="img\picOfMe.jpg" />
     <Content Include="index.html" />
     <Content Include="contacts.html" />
+    <Content Include="jslabs.html" />
     <Content Include="projects.html" />
     <Content Include="resume.html" />
     <Content Include="links.html" />
